<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="15"
	    android:background="@color/black2"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/about_margin_50"
	    android:scrollbars="vertical">
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:orientation="vertical" >
	
	        <TextView
	            android:id="@+id/about_1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/FAQ"
	            android:textColor="@android:color/primary_text_dark_nodisable"
	            android:textSize="@dimen/about_text_size" />
	
	        <LinearLayout
	            android:id="@+id/FAQ_content"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/about_margin_30"
	            android:gravity="left"
	            android:orientation="vertical"
	            android:visibility="gone" >
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="left"
	                android:text="@string/FAQ_1"
	                android:textColor="@color/blue"
	                android:textSize="@dimen/about_text_size_2" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/FAQ_1_answer"
	                android:textColor="@android:color/secondary_text_dark_nodisable"
	                android:textSize="@dimen/about_text_size_3" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/FAQ_2"
	                android:textColor="@color/blue"
	                android:textSize="@dimen/about_text_size_2" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/FAQ_2_answer"
	                android:textColor="@android:color/secondary_text_dark_nodisable"
	                android:textSize="@dimen/about_text_size_3" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/FAQ_3"
	                android:textColor="@color/blue"
	                android:textSize="@dimen/about_text_size_2" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/FAQ_3_answer"
	                android:textColor="@android:color/secondary_text_dark_nodisable"
	                android:textSize="@dimen/about_text_size_3" />
				<TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/FAQ_4"
	                android:textColor="@color/blue"
	                android:textSize="@dimen/about_text_size_2" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/FAQ_4_answer"
	                android:textColor="@android:color/secondary_text_dark_nodisable"
	                android:textSize="@dimen/about_text_size_3" />
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/FAQ_5"
	                android:textColor="@color/blue"
	                android:textSize="@dimen/about_text_size_2" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/FAQ_5_answer"
	                android:textColor="@android:color/secondary_text_dark_nodisable"
	                android:textSize="@dimen/about_text_size_3" />
	        </LinearLayout>
	
	        <TextView
	            android:id="@+id/about_2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/about_margin_30"
	            android:text="@string/about"
	            android:textColor="@android:color/primary_text_dark_nodisable"
	            android:textSize="@dimen/about_text_size" />
	
	        <LinearLayout
	            android:id="@+id/about_content"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/about_margin_30"
	            android:gravity="left"
	            android:orientation="vertical"
	            android:visibility="gone" >
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="left"
	                android:text="@string/about_1"
	                android:textColor="@color/blue"
	                android:textSize="@dimen/about_text_size_2" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="50dp"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/about_1_content"
	                android:textColor="@android:color/secondary_text_dark_nodisable"
	                android:textSize="@dimen/about_text_size_3" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/about_2"
	                android:textColor="@color/blue"
	                android:textSize="@dimen/about_text_size_2" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="50dp"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/about_2_content"
	                android:textColor="@android:color/secondary_text_dark_nodisable"
	                android:textSize="@dimen/about_text_size_3" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/about_3"
	                android:textColor="@color/blue"
	                android:textSize="@dimen/about_text_size_2" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="50dp"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/about_3_content"
	                android:textColor="@android:color/secondary_text_dark_nodisable"
	                android:textSize="@dimen/about_text_size_3" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/about_4"
	                android:textColor="@color/blue"
	                android:textSize="@dimen/about_text_size_2" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="50dp"
	                android:layout_marginTop="10dp"
	                android:gravity="left"
	                android:text="@string/about_4_content"
	                android:textColor="@android:color/secondary_text_dark_nodisable"
	                android:textSize="@dimen/about_text_size_3" />
	        </LinearLayout>
	
	        <TextView
	            android:id="@+id/about_3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/about_margin_30"
	            android:text="@string/advice"
	            android:textColor="@android:color/primary_text_dark_nodisable"
	            android:textSize="@dimen/about_text_size" />
	
	        <TextView
	            android:id="@+id/about_4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/about_margin_30"
	            android:text="@string/share"
	            android:textColor="@android:color/primary_text_dark_nodisable"
	            android:textSize="@dimen/about_text_size" />
	          <TextView
	            android:id="@+id/about_5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/about_margin_30"
	            android:text="@string/about_5"
	            android:textColor="@android:color/primary_text_dark_nodisable"
	            android:textSize="@dimen/about_text_size" />
	    </LinearLayout>
	</ScrollView>
	<Button
	    android:id="@+id/button_back"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2"
	    android:text="返回"
	    android:textColor="@color/white"
	    android:textSize="@dimen/middle_text_size"
	    android:background="@color/blue2"/>
	<Button
	    android:id="@+id/button_logout"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2"
	    android:text="注销"
	    android:textColor="@color/white"
	    android:textSize="@dimen/middle_text_size"
	    android:background="@color/red"/>
</LinearLayout>