<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black2">
	<LinearLayout 
	    android:layout_width="match_parent"
	 	android:layout_height="0dp"
	 	android:layout_weight="8">
	 	<ImageView 
	 	    android:layout_width="match_parent"
	 	    android:layout_height="match_parent"
	 	    android:src="@drawable/library"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	 	android:layout_height="0dp"
	 	android:layout_weight="10"
	 	android:orientation="vertical">
	 	<FrameLayout 
	 	    android:layout_width="match_parent"
	 	    android:layout_height="0dp"
	 	    android:layout_weight="7">
	 	    <!-- 检索 -->
	 	    <LinearLayout
	 	        android:id="@+id/view_search"
	 	        android:layout_width="match_parent"
	 	        android:layout_height="match_parent"
	 	        android:orientation="vertical">
	 	        <FrameLayout 
	 	            android:layout_width="match_parent"
	 	            android:layout_height="0dp"
	 	            android:layout_weight="1">
					<EditText
					    android:id="@+id/edittext_search"
   	 	    	        android:layout_width="match_parent"
	 		            android:layout_height="match_parent"
						android:background="@color/lib_search"
		 	            android:layout_margin="20dp"
						android:hint="@string/lib_hint"
		 	            android:textSize="20sp"
		 	            android:paddingLeft="10dp"
		 	            android:paddingRight="10dp"
		 	            android:singleLine="true">
	 	    	    </EditText>
				</FrameLayout>
				<LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="0dp"
				    android:layout_weight="1"
				    android:orientation="horizontal">
					<LinearLayout 
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="1">
					</LinearLayout>
					<LinearLayout 
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="1"
					    android:orientation="vertical">
						<LinearLayout 
						    android:layout_width="match_parent"
						    android:layout_height="0dp"
						    android:layout_weight="1">
						</LinearLayout>
					    <Button
					        android:id="@+id/button_search"
						    android:layout_width="match_parent"
						    android:layout_height="0dp"
						    android:layout_weight="2"
						    android:background="@color/blue2"
						    android:text="@string/lib_search"
						    android:textColor="@color/white"/>
						<LinearLayout 
						    android:layout_width="match_parent"
						    android:layout_height="0dp"
						    android:layout_weight="1">
						</LinearLayout>
					</LinearLayout>
					<LinearLayout 
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="1">
					</LinearLayout>
				</LinearLayout>
	 		</LinearLayout>
	 	    <!-- 登录 -->
	 	    <LinearLayout
	 	        android:id="@+id/view_login"
	 	        android:visibility="gone"
	 	        android:layout_width="match_parent"
	 	        android:layout_height="match_parent"
	 	        android:orientation="vertical">
	 	        <FrameLayout 
	 	            android:layout_width="match_parent"
	 	            android:layout_height="0dp"
	 	            android:layout_weight="0.8">
					<EditText
					    android:id="@+id/edittext_username"
   	 	    	        android:layout_width="match_parent"
	 		            android:layout_height="match_parent"
						android:background="@color/lib_exittext"
						android:gravity="center"
						android:hint="@string/lib_username"
						android:inputType="number"
		 	            android:textSize="20sp"
		 	            android:textColor="@color/black"
		 	            android:layout_marginTop="5dp"
		 	            android:layout_marginBottom="5dp"
		 	            android:layout_marginLeft="20dp"
		 	            android:layout_marginRight="20dp">
	 	    	    </EditText>
	 	    	    <ImageButton
	 	    	        android:id="@+id/button_del_username"
					    android:visibility="invisible"
					    android:background="@color/transparent"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:src="@drawable/small_delete"
					    android:layout_gravity="right|center_vertical"
					    android:layout_marginRight="25dp"/>
				</FrameLayout>
	 	        <FrameLayout 
	 	            android:layout_width="match_parent"
	 	            android:layout_height="0dp"
	 	            android:layout_weight="0.8">
					<EditText
					    android:id="@+id/edittext_password"
   	 	    	        android:layout_width="match_parent"
	 		            android:layout_height="match_parent"
						android:background="@color/lib_exittext"
						android:gravity="center"
		 	            android:hint="@string/lib_password"
		 	            android:inputType="textPassword"
		 	            android:textSize="20sp"
		 	            android:textColor="@color/black"
		 	            android:layout_marginTop="5dp"
		 	            android:layout_marginBottom="5dp"
		 	            android:layout_marginLeft="20dp"
		 	            android:layout_marginRight="20dp">
	 	    	    </EditText>
					<ImageButton
					    android:id="@+id/button_del_password"
					    android:visibility="invisible"
					    android:background="@color/transparent"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:src="@drawable/small_delete"
					    android:layout_gravity="right|center_vertical"
					    android:layout_marginRight="25dp"/>
				</FrameLayout>
	 	        <LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="0dp"
				    android:layout_weight="1"
				    android:orientation="horizontal">
					<LinearLayout 
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="1">
					</LinearLayout>
					<LinearLayout 
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="1"
					    android:orientation="vertical">
						<LinearLayout 
						    android:layout_width="match_parent"
						    android:layout_height="0dp"
						    android:layout_weight="1">
						</LinearLayout>
						<Button
						    android:id="@+id/button_login"
						    android:layout_width="match_parent"
						    android:layout_height="0dp"
						    android:layout_weight="4"
						    android:background="@color/blue2"
						    android:text="@string/lib_login"
						    android:textColor="@color/white"
						    android:layout_gravity="center_vertical"/>
						<LinearLayout 
						    android:layout_width="match_parent"
						    android:layout_height="0dp"
						    android:layout_weight="1">
						</LinearLayout>
						"
					</LinearLayout>
					<LinearLayout 
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="1">
					</LinearLayout>
				</LinearLayout>
	 		</LinearLayout>
	 	</FrameLayout>
	 	<LinearLayout 
	 	    android:layout_width="match_parent"
	 	    android:layout_height="0dp"
	 	    android:layout_weight="1.5"
	 	    android:orientation="vertical">
	 	    <Button
	 	        android:id="@+id/menu_login"
	 	        android:layout_width="match_parent"
	 	        android:layout_height="0dp"
	 	        android:layout_weight="1"
	 	        android:background="@color/blue2"
	 	        android:text="@string/lib_menu_login"
	 	        android:textColor="@color/white"/>
	 	</LinearLayout>
	</LinearLayout>
</LinearLayout>
