<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/course_detail_layout"
    android:background="@color/blue">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">
        <TextView
            android:id="@+id/text_coursename"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/giant_text_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical">
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
		    android:layout_marginBottom="10dp"
		    android:background="@color/weather_bg"
		    android:orientation="horizontal">
		    <TextView 
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:gravity="left|center_vertical"
		        android:layout_marginLeft="5dp"
		        android:text="@string/course_room"
		        android:textColor="@color/white"
		        android:textSize="@dimen/large_text_size"/>
		    <TextView
		        android:id="@+id/text_room"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:gravity="right|center_vertical"
		        android:layout_marginRight="5dp"
		        android:textSize="@dimen/large_text_size"
		        android:textColor="@color/white"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
		    android:layout_marginBottom="10dp"
		    android:background="@color/weather_bg"
		    android:orientation="horizontal">
		    <TextView 
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:gravity="left|center_vertical"
		        android:layout_marginLeft="5dp"
		        android:text="@string/course_teacher"
		        android:textColor="@color/white"
		        android:textSize="@dimen/large_text_size"/>
		    <TextView
		        android:id="@+id/text_teacher"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:gravity="right|center_vertical"
		        android:layout_marginRight="5dp"
		        android:textSize="@dimen/large_text_size"
		        android:textColor="@color/white"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
		    android:layout_marginBottom="10dp"
		    android:background="@color/weather_bg"
		    android:orientation="horizontal">
		    <TextView 
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:gravity="left|center_vertical"
		        android:layout_marginLeft="5dp"
		        android:text="@string/course_time"
		        android:textColor="@color/white"
		        android:textSize="@dimen/large_text_size"/>
		    <TextView
		        android:id="@+id/text_time"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:gravity="right|center_vertical"
		        android:layout_marginRight="5dp"
		        android:textSize="@dimen/large_text_size"
		        android:textColor="@color/white"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
		    android:layout_marginBottom="10dp"
		    android:background="@color/weather_bg"
		    android:orientation="horizontal">
		    <TextView 
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:gravity="left|center_vertical"
		        android:layout_marginLeft="5dp"
		        android:text="@string/course_schedule"
		        android:textColor="@color/white"
		        android:textSize="@dimen/large_text_size"/>
		    <TextView
		        android:id="@+id/text_schedule"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:gravity="right|center_vertical"
		        android:layout_marginRight="5dp"
		        android:textSize="@dimen/large_text_size"
		        android:textColor="@color/white"/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:background="@color/course_background">
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
		    <ImageButton
                android:id="@+id/button_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/back"
                android:background="@color/transparent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:layout_gravity="center"
            android:orientation="horizontal">
			<TextView 
			    android:id="@+id/text_week"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
				android:gravity="center"
			    android:textColor="@color/black"
			    android:textSize="@dimen/large_text_size"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
        </LinearLayout>
	</LinearLayout>
</LinearLayout>
